--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CazarPatos.Personalizado"
         tools:targetApi="31">
-
         <activity
-            android:name=".LoginActivity"
+            android:name=".RankingActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,11 +22,14 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".LoginActivity"
+            >
+
+        </activity>
+        <activity
             android:name=".MainActivity"
-            android:exported="false" />
-
-
-
+             >
+        </activity>
     </application>
 
 </manifest>
